<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PocketFile" >

    <EditText
        android:id="@+id/txtFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text" >

    </EditText>

    <TextView
        android:id="@+id/lblIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFile"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/labelIP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFile"
        android:layout_below="@+id/txtFile"
        android:layout_marginTop="43dp"
        android:text="@string/labelPort"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPort"
        android:layout_below="@+id/lblPort"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="number" />

    <ImageView
        android:id="@+id/imgIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblPort"
        android:layout_toRightOf="@+id/txtFile"
        android:contentDescription="@string/general"
        android:src="@drawable/ip" />

    <ImageView
        android:id="@+id/imgPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtPort"
        android:layout_alignLeft="@+id/imgIp"
        android:contentDescription="@string/general"
        android:src="@drawable/port" />

    <CheckBox
        android:id="@+id/chkSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPort"
        android:layout_below="@+id/txtPort"
        android:layout_marginTop="40dp"
        android:text="@string/chkSettings"
        android:textStyle="italic" />

    <ProgressBar
        android:id="@+id/prbConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butCancel"
        android:layout_toRightOf="@+id/butCancel"
        android:visibility="visible" />

    <Button
        android:id="@+id/butCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/butConnect"
        android:layout_alignBottom="@+id/butConnect"
        android:layout_alignRight="@+id/txtPort"
        android:layout_toRightOf="@+id/lblIp"
        android:text="@string/butCancel" />

    <Button
        android:id="@+id/butConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chkSettings"
        android:layout_alignParentBottom="true"
        android:text="@string/butConnect" />

    <ImageButton
        android:id="@+id/imgbutExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/chkSettings"
        android:layout_alignRight="@+id/imgPort"
        android:contentDescription="@string/general"
        android:src="@drawable/exit" />

    <TextView
        android:id="@+id/lblAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/labelAbout"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cyan" />

</RelativeLayout>