<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PocketFile" >

    <Button
        android:id="@+id/butBrowse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/lstvFiles"
        android:layout_marginTop="33dp"
        android:text="@string/butFile" />

    <ListView
        android:id="@+id/lstvFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butBrowse"
        android:background="@color/gray" >
    </ListView>

    <Button
        android:id="@+id/butStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lstvFiles"
        android:layout_alignLeft="@+id/lstvFiles"
        android:text="@string/butStart" />

    <ProgressBar
        android:id="@+id/progState"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/butBrowse"
        android:layout_alignTop="@+id/lblState"
        android:layout_toRightOf="@+id/butStart" />

    <TextView
        android:id="@+id/lblState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butStart"
        android:layout_alignParentTop="true"
        android:text="@string/labelState"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lstvFiles"
        android:layout_below="@+id/lblState"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/general"
        android:src="@drawable/arrow" />
    
</RelativeLayout>